Changelog
=========

1.2.0 (unreleased)
------------------

- Improve gtl-progres terminal color detection.


1.1.0 (2016-02-03)
------------------

- Add integration to notification center (MacOS >= 10.9).

  When running the upload (e.g. via a cronjob) you now get notified via MacOSs
  notification center. Clicking the notification opens the timelog in your
  configured editor.


1.0 (2015-11-18)
----------------

- Bump dependencies to newest versions. Also bump package version to 1.0 as
  its now stable for a long time.

- Allow unicode in task description.

- Allow using '*' as a project in the bugtracker project list to support
  defaulting to a tracker. Has lowest score and any specific project will
  override.

- Add error reporting ticket # but no tracker was found.

- ``gtl-progress``: Workaround for Python on MacOS and Nix which is not having
  curses build in.


0.10.0 (2015-06-08)
-------------------

- Improve error reporting when timelog entries are out of order (i.e. end before begin)

- Don't put out colors in ``gtl-progress`` when terminal doesn't support it.

- Use locally build `` jira-python`` (now named ``jira``) instead of
  ``jira-python`` which no longer existis on PyPI.

- Ignore inactive projects and tasks when updating tasklist from collmex.
  (#13840)


0.9.0 (2014-02-25)
------------------

- Uploading via ``bin/gtl-upload`` defaults to the last seven days when given
  no explicit date to upload.


0.8.6 (2013-12-06)
------------------

- Fix `decode_passwords` feature to again allow umlauts in task
  descriptions.

- Allow to use ``decode_passwords = rot13`` to encode passwords using the
  ROT13 algorithm.


0.8.5 (2013-12-05)
------------------

- Fixed recent fix: actually use the encoding opt-in in the other place, too.


0.8.4 (2013-12-05)
------------------

- Fixed recent change: actually use the encoding opt-in.


0.8.3 (2013-12-05)
------------------

- Work around jira-python bug #72 with non-ASCII server error messages.
