@@ -6,6 +6,9 @@ Changelog
 
 - Improve gtl-progres terminal color detection.
 
+- Display progress of work done in current month and year in `gtl-progress`
+  output.
+
 
 1.1.0 (2016-02-03)
 ------------------
